tests/programs/valid/SingleDimensionalArrayExample.java
public class SingleDimensionalArrayExample {
    public static void main(String[] args) {
        int[] singleArray = new int[5];
    }

    public SingleDimensionalArrayExample() {
        
    }
}
