tests/programs/invalid/unicode_escapes.java
public class unicode_escapes {
  public A() {}
  protected String x = "\u2297";
}